--- a/src/App.css
+++ b/src/App.css
@@ -377,5 +377,63 @@ div.divider {
   margin-bottom: 10px;
 }
 .loginOrRegister button:last-child {
-    float: right;
+  float: right;
+}
+.input-wrap-currency {
+  position: relative;
+}
+.currencyType {
+    background: transparent;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+    cursor: pointer;
+}
+.currencyType > div {
+    position: relative;
+    margin: 0 auto;
+    padding: 10px 15px;
+    background: transparent;
+    outline: none;
+    transition: all .3s ease-out;
+    font-size: 14px;
+}
+.dropdown {
+    margin: 0;
+    min-width: 120px;
+    position: absolute;
+    top: 2.4rem;
+    right: 0;
+    z-index: 999;
+    margin-left: 0;
+    background: #fff;
+    border-radius: 0 0 5px 5px;
+    border: 1px solid rgba(0,0,0,.2);
+    border-top: none;
+    border-bottom: none;
+    list-style: none;
+    transition: all .3s ease-out;
+    max-height: 0;
+    overflow: hidden;
+    color: #fff;
+    background-color: #7e7e7e;
+    text-align: right;
+}
+.dropdown li {
+    transition: background-color .3s ease 0s;
+    width: 100%;
+}
+.dropdown span {
+    font-size: .875rem;
+    font-weight: 400;
+    font-style: normal;
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    padding: 8px 10px;
+    transition: all .3s ease-out;
+}
+.currencyType.active .dropdown {
+    max-height: 210px;
 }
